# FaultPilot

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.bash
.github/workflows/: ci.yml
assets/: README.md
assets/missions/: square_500m_five_laps_loiter5_land.waypoints
docs/: architecture.md  installation.md  related_work.md
docs/design/: ADR-0001-airspeed-failure-mission-design.md  ADR-0002-airspeed-failure-case-payloads-and-ratio-sweep.md  ADR-0003-airspeed-failure-reset-protocol.md  ADR-0004-airspeed-failure-injection-trigger.md  ADR-0005-airspeed-failure-reference-wind.md  ADR-0006-airspeed-failure-behavior-classification.md  README.md
docs/lanes/: README.md  airspeed_failure.md  wind_matrix.md
results/: README.md
results/airspeed_failure_2026-06/: README.md  REPORT.md  manifest.json
results/airspeed_failure_2026-06/pulse_ladder/: baseline_fault_pairs_bin_summary.csv  health_analysis_metadata.json  phase_windows_bin_summary.csv  pulse_window_health_summary.csv
results/airspeed_failure_2026-06/ramp_p100/: window_summary.csv
results/airspeed_failure_2026-06/ramp_p200/: compare_to_p100_run.csv  (+1 more)
results/wind_envelope_2026-06/: README.md  cte_metrics.json  written_conclusion_exec.md  written_conclusion_technical.md
scripts/: launch.sh
src/faultpilot/: __init__.py
tests/unit/: test_airspeed_failure.py  test_campaign_contracts.py  test_campaign_manifest_safety.py  test_core_isolation.py  test_manifest_generic_view.py  test_staged_attempt.py  test_wind_matrix_analysis_helpers.py  test_wind_world_safety.py
(+81 files in other folders)
